compiling_error.txt
C:\Users\josue\OneDrive\Documents\css2proj\project1.cpp: In function 'double calc_average(std::vector<double>&, double, double, double)':
C:\Users\josue\OneDrive\Documents\css2proj\project1.cpp:48:10: error: request for member 'clear' in '(& s)->std::vector<_Tp, _Alloc>::operator[]<double, std::allocator<double> >(0u)', which is of non-class type '__gnu_cxx::__alloc_traits<std::allocator<double> >::value_type {aka double}'
     s[0].clear();
          ^~~~~
